# svb-camera-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
pysvb/: .gitignore  Cargo.toml  README.md  create_whl.sh  pyproject.toml
pysvb/python/pysvb/: test.py
pysvb/src/: lib.rs
src/: camera.rs  debayer.rs  lib.rs  libsvb.rs  utils.rs
svb-py/: Cargo.toml  pyproject.toml  test.py
svb-py/src/: lib.rs
