[package]
name = "svbony-camera-rs"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thiserror = "1.0.47"
env_logger = "0.10.0"
log = "0.4.20"
image = "0.24.7"
num="0.4.1"
chrono="0.4.28"
itertools="0.11.0"
libc = "0.2"
bayer = "0.1"
rayon="1.7.0"
[build-dependencies]
bindgen = "0.68.1"
