[package]
name = "pysvb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pysvb"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.19.2", features = ["extension-module"] }
svbony-camera-rs={path="../"}
bayer="0.1.5"